[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fitz>=0.0.1.dev2",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.3",
    "langsmith>=0.4.10",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
